--- a/src/specifiedbehavior.web/specifiedbehavior.web/appsettings.json
+++ b/src/specifiedbehavior.web/specifiedbehavior.web/appsettings.json
@@ -8,5 +8,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiKeys": [ "key1", "key2", "key3" ]
 }
