--- a/src/web/docs/package.json
+++ b/src/web/docs/package.json
@@ -14,6 +14,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@vuepress/plugin-google-analytics": "^2.0.0-beta.62",
     "vuepress": "^1.5.3"
   }
 }
